code25_all/python/2043453.txt
-c
$ python -c "for r in range(10): print 'rob'"

$ python -c "import sys; for r in range(10): print 'rob'"
  File "<string>", line 1
    import sys; for r in range(10): print 'rob'
              ^
SyntaxError: invalid syntax

